force-app/main/default/objects/Template_Management_Config__mdt/Template_Management_Config__mdt.object-meta.xml
<CustomObject>
    <description>Setup for template management</description>
    <label>Template Management Config</label>
    <pluralLabel>Template Management Configs</pluralLabel>
</CustomObject>