force-app/main/default/objects/Template_Management_Config__mdt/fields/Cloned_Emails_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Emails_Folder_Name__c</fullName>
    <description>API name of the folder accessible by template submitter which stores copies of email temaplates</description>
    <label>Cloned Emails Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>