force-app/main/default/objects/Template_Management_Config__mdt/fields/Letterhead_name__c.field-meta.xml
<CustomField>
    <fullName>Letterhead_name__c</fullName>
    <description>API name of letterhead which will be applied to all templates created by template submitter</description>
    <label>Letterhead name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>