force-app/main/default/objects/Template_Management_Config__mdt/fields/Template_Style__c.field-meta.xml
<CustomField>
    <fullName>Template_Style__c</fullName>
    <description>Style for all templates created by template submitter</description>
    <label>Template Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>