force-app/main/default/objects/Template_Management_Config__mdt/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <description>Template type (HTML or VF) for all templates created by template submitter</description>
    <label>Template Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>